# ChangeLog for media-libs/mesa
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.195 2009/03/25 13:15:28 remi Exp $

*mesa-7.4_rc1 (25 Mar 2009)

  25 Mar 2009; Rémi Cardona <remi@gentoo.org> +mesa-7.4_rc1.ebuild:
  bump to 7.4_rc1 with a couple more patches from git

*mesa-7.3-r2 (23 Mar 2009)

  23 Mar 2009; Rémi Cardona <remi@gentoo.org> +mesa-7.3-r2.ebuild:
  add another 60+ patches from the 7.4 branch (tarball now has 135 patches),
  use the -9999 ebuild from the overlay which has all kinds of fixes (thanks
  to scarabeus and magnus)

*mesa-7.3-r1 (07 Mar 2009)

  07 Mar 2009; Rémi Cardona <remi@gentoo.org> +mesa-7.3-r1.ebuild:
  add 60+ patches from the 7.4 branch

  03 Feb 2009; Rémi Cardona <remi@gentoo.org> mesa-7.3.ebuild:
  only pull in the git eclass when PV==9999, fixes bug #257461

*mesa-7.3 (01 Feb 2009)

  01 Feb 2009; Rémi Cardona <remi@gentoo.org> +mesa-7.3.ebuild:
  bump to 7.3, copy from the x11 overlay

  30 Jan 2009; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Document local USE=pic flag.

  22 Oct 2008; Rémi Cardona <remi@gentoo.org> mesa-6.5.2-r1.ebuild,
  mesa-7.0.3.ebuild, mesa-7.1_rc3.ebuild, mesa-7.1.ebuild,
  mesa-7.2_rc1.ebuild, mesa-7.2.ebuild:
  pkgmove from xf86-video-i810 to xf86-video-intel

*mesa-7.2 (21 Sep 2008)

  21 Sep 2008; Donnie Berkholz <dberkholz@gentoo.org>; +mesa-7.2.ebuild:
  Version bump.

  14 Sep 2008; Donnie Berkholz <dberkholz@gentoo.org>; mesa-7.2_rc1.ebuild:
  (#237648) Logic for asm was still wrong on sparc hardened (Does that even
  exist?). Remove sparc-handling code altogether because the default does
  the right thing.

  14 Sep 2008; Donnie Berkholz <dberkholz@gentoo.org>; mesa-7.1.ebuild,
  mesa-7.2_rc1.ebuild:
  mesa-progs has to be in PDEPEND to avoid a circular dependency through
  freeglut (reported by Javier Villavicencio).

*mesa-7.2_rc1 (14 Sep 2008)
