@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.195 2009/03/25 13:15:28 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.196 2009/03/26 14:00:22 remi Exp $
+
+  26 Mar 2009; Rémi Cardona <remi@gentoo.org> -mesa-7.3-r2.ebuild:
+  drop 7.3-r2, it's almost identical to 7.4_rc1
 
 *mesa-7.4_rc1 (25 Mar 2009)
 
